cluster/manifests/mimir/overlays/dev/etcd/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: etcd
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: etcd
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./mimir-etcd.mimir.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
